remove selection style to fix missing background color

--- a/src/driver/codemirror/indentBorder/indentBorder.css
+++ b/src/driver/codemirror/indentBorder/indentBorder.css
@@ -27,10 +27,10 @@ pre.cm-jn-code-block.CodeMirror-line {
     line-height: initial !important;
 }
 
-.CodeMirror-selected {
-    background-color: transparent !important;
-}
+/*.CodeMirror-selected {*/
+/*    background-color: transparent !important;*/
+/*}*/
 
-.CodeMirror-selectedtext {
-    background-color: rgba(179, 215, 255, 1) !important;
-}
+/*.CodeMirror-selectedtext {*/
+/*    background-color: rgba(179, 215, 255, 1) !important;*/
+/*}*/
